--- a/gallery.css
+++ b/gallery.css
@@ -1,6 +1,9 @@
+body {
+	margin: 0;
+}
 .gallery-parent {
 	width: 100%;
-	height: 800px;
+	height: 100vh;
 	position: relative;
 }
 .gallery-wrapper,
@@ -48,4 +51,71 @@
 }
 .arrow.next {
 	right: 0;
+}
+
+
+
+.wrapper {
+  width: 50px; /* Set the size of the progress bar */
+  height: 50px;
+  position: absolute; /* Enable clipping */
+  clip: rect(0px, 50px, 50px, 25px); /* Hide half of the progress bar */
+  z-index: 1;
+}
+/* Set the sizes of the elements that make up the progress bar */
+.circle {
+  width: 30px;
+  height: 30px;
+  border: 10px solid green;
+  border-radius: 50px;
+  position: absolute;
+  clip: rect(0px, 25px, 50px, 0px);
+}
+/* Using the data attributes for the animation selectors. */
+/* Base settings for all animated elements */
+div[data-anim~=base] {
+  -webkit-animation-iteration-count: 1;  /* Only run once */
+  -webkit-animation-fill-mode: forwards; /* Hold the last keyframe */
+  -webkit-animation-timing-function:linear; /* Linear animation */
+}
+
+.wrapper[data-anim~=wrapper] {
+  -webkit-animation-duration: 0.01s; /* Complete keyframes asap */
+  -webkit-animation-delay: 1s; /* Wait half of the animation */
+  -webkit-animation-name: close-wrapper; /* Keyframes name */
+}
+
+.circle[data-anim~=left] {
+  -webkit-animation-duration: 2s; /* Full animation time */
+  -webkit-animation-name: left-spin;
+}
+
+.circle[data-anim~=right] {
+  -webkit-animation-duration: 1s; /* Half animation time */
+  -webkit-animation-name: right-spin;
+}
+
+/* Rotate the right side of the progress bar from 0 to 180 degrees */
+@-webkit-keyframes right-spin {
+  from {
+    -webkit-transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(180deg);
+  }
+}
+/* Rotate the left side of the progress bar from 0 to 360 degrees */
+@-webkit-keyframes left-spin {
+  from {
+    -webkit-transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+  }
+}
+/* Set the wrapper clip to auto, effectively removing the clip */
+@-webkit-keyframes close-wrapper {
+  to {
+    clip: rect(auto, auto, auto, auto);
+  }
 }
